--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/TaiKhoanComponent/TableDetailTK.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/TaiKhoanComponent/TableDetailTK.form
@@ -108,10 +108,10 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="MaNV" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="MaTK" alignment="0" max="32767" attributes="0"/>
                                       <Component id="TK" alignment="0" max="32767" attributes="0"/>
                                       <Component id="MK" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="Q" max="32767" attributes="0"/>
+                                      <Component id="MaNV" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                               </Group>
@@ -135,7 +135,7 @@
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Component id="maNV" max="32767" attributes="0"/>
+                              <Component id="maTK" max="32767" attributes="0"/>
                               <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
@@ -160,11 +160,11 @@
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                              <Component id="maNV" max="32767" attributes="0"/>
+                              <Component id="maTK" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace min="35" pref="35" max="-2" attributes="0"/>
-                              <Component id="MaNV" max="32767" attributes="0"/>
+                              <Component id="MaTK" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -179,7 +179,7 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="Q" alignment="3" max="32767" attributes="0"/>
+                          <Component id="MaNV" alignment="3" max="32767" attributes="0"/>
                           <Component id="q" alignment="3" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -198,12 +198,12 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="MaNV">
+            <Component class="javax.swing.JLabel" name="MaTK">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="M&#xe3; Nh&#xe2;n Vi&#xea;n :"/>
+                <Property name="text" type="java.lang.String" value="M&#xe3; T&#xe0;i Kho&#x1ea3;n"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="MK">
@@ -214,12 +214,12 @@
                 <Property name="text" type="java.lang.String" value="M&#x1ead;t Kh&#x1ea9;u :"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="Q">
+            <Component class="javax.swing.JLabel" name="MaNV">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Quy&#x1ec1;n :"/>
+                <Property name="text" type="java.lang.String" value="M&#xe3; Nh&#xe2;n Vi&#xea;n"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="TT">
@@ -238,7 +238,7 @@
                 <Property name="text" type="java.lang.String" value="T&#xe0;i Kho&#x1ea3;n :"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="maNV">
+            <Component class="javax.swing.JLabel" name="maTK">
               <Properties>
                 <Property name="text" type="java.lang.String" value="1"/>
               </Properties>
